fix MyAccordion layout issue and checkbox Mut issue

--- a/src/Components/MyAccordion/myAccordion.css
+++ b/src/Components/MyAccordion/myAccordion.css
@@ -52,6 +52,8 @@
     background-color: white;
     /* overflow: auto; */
     transition: max-height  0.6s ease;
+    max-height: 0;
+    overflow: hidden;
 }
 
 /* feed-sort */
@@ -91,7 +93,7 @@
 	background-color:none;
 	zoom: 1;
 	outline: none;
-	-webkit-appearance:none;/*去除默认样式*/
+	-webkit-appearance:none;    /*去除默认样式*/
 	-webkit-appearance:none;
 	-moz-appearance:none;
 	-o-appearance:none;
@@ -100,8 +102,8 @@
 
 /*设置复选框选中时的样式*/
 .feed--item_input[type=checkbox]:checked{
-	background-image: url(./Icon/checkmark.svg);/*引入背景图*/
-	background-size:100%;/*设置背景图大小*/
+	background-image: url(./Icon/checkmark.svg);    /*引入背景图*/
+	background-size:100%;   /*设置背景图大小*/
 }
 
 .feed--item_input[type=checkbox]:checked + label{
@@ -110,7 +112,6 @@
 }
 
 /* todo list */
-
 .wrap--todo{
     background-color: #ebebeb;
 }
@@ -125,7 +126,11 @@
     width: 50%;
     text-align: center;
     margin-bottom: 15px;
+    cursor: pointer;
 }
+.todo--item:hover{
+    color: rgba(0, 0, 0, 0.5);
+}   
 
 .todo--item_icon{
     width: 16px;
@@ -141,9 +146,36 @@
 .todo--item:last-of-type > .todo--item_text{
     color: blue;
 }
+.todo--item:hover:last-of-type > .todo--item_text{
+    color: rgba(0, 0, 255,0.5);
+}
+
+/* discord */
 
 .wrap-discord{
-    padding: 0px 30px 30px;
+    padding:30px;
     background-color: white;
     z-index: 1000;
+}
+.header{
+    display: flex;
+}
+
+.header__icon{
+    width: 40px;
+    margin-right: 10px;
+}
+
+.header__title{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 700;
+}
+.desc__title{
+    margin-top: 20px;
+    font-weight: 500;
+}
+
+.desc{
+    margin-top: 15px;
+    font-weight: 400;
 }
